Fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* GENERAL STYLES */
@@ -35,6 +36,8 @@ body {
   color: var(--dark-green-color);
   background-color: var(--beige-color);
   font-size: var(--fs-body);
+  overflow-x: hidden;
+  position: relative;
 }
 
 h1 {
